<resources>
    <string name="app_name">Mobile Puzzle Game</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="left"><![CDATA[<]]></string>
    <string name="right"><![CDATA[>]]></string>
    <string name="back"><![CDATA[< Back]]></string>
    <string name="backToMenu"><![CDATA[< QUIT]]></string>
    <string name="select_image">Select image</string>
    <string name="image_selected_to_puzzle">Image selected to puzzle</string>
    <string name="image_number">TextView</string>
    <string name="btn_select_text">Select</string>
</resources>