<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectPictureFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutSelectTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:backgroundTint="@color/amber_700"
            android:text="@string/back"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/textViewSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageViewSelectImage"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintBottom_toTopOf="@+id/rowAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutSelectTop"
        app:layout_constraintVertical_bias="0.15"
        android:contentDescription="@string/image_selected_to_puzzle" />

    <TextView
        android:id="@+id/textViewImageNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:text="@string/image_number"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewSelectImage"
        app:layout_constraintEnd_toEndOf="@+id/imageViewSelectImage" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rowAction"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSelectImage"
        app:layout_constraintVertical_bias="0.7">

        <Button
            android:id="@+id/btnLeftImage"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/left"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/spaceAction1"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@+id/btnLeftImage"
            app:layout_constraintEnd_toStartOf="@+id/btnSelect"
            />

        <Button
            android:id="@+id/btnSelect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btn_select_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spaceAction2"
            app:layout_constraintStart_toEndOf="@+id/spaceAction1" />

        <Space
            android:id="@+id/spaceAction2"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@id/btnRightImage" />

        <Button
            android:id="@+id/btnRightImage"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/right"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>